# rapier.js

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: README.md  code-improvements.md  config.json  fast-transform-buffer.md  fix-pr-60-conflicts.md  fix-wasm-borrow-tracking.md
.claude/: settings.json
.github/workflows/: main.yml  release.yml
crates/rapier-wasm-2d/: Cargo.toml
crates/rapier-wasm-3d/: Cargo.toml
rapier-compat/: package.json
src/: lib.rs  math.rs
src/control/: character_controller.rs  pid_controller.rs  ray_cast_vehicle_controller.rs
src/dynamics/: impulse_joint.rs  joint.rs  mod.rs  multibody_joint_set.rs  rigid_body.rs  rigid_body_set.rs  transform_buffer.rs
src/geometry/: broad_phase.rs  collider.rs  collider_set.rs  contact.rs  narrow_phase.rs  point.rs  shape.rs  toi.rs
src/pipeline/: debug_render_pipeline.rs  event_queue.rs  physics_hooks.rs  physics_pipeline.rs  serialization_pipeline.rs
testbed2d/: package-lock.json  package.json
testbed3d/: package-lock.json  package.json
