[package]
name = "rapier-wasm-2d"
version = "0.19.3"
edition = "2021"
license = "Apache-2.0"
description = "2-dimensional physics engine - official WASM bindings"

[lib]
crate-type = ["cdylib"]
path = "../../src/lib.rs"

[features]
default = ["dim2"]
dim2 = []
simd = ["rapier2d/simd-stable"]
deterministic = ["rapier2d/enhanced-determinism"]

[dependencies]
rapier2d = { version = "0.32", features = ["debug-render", "serde-serialize"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
bitflags = "2"
palette = "0.7"
bincode = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
