[package]
name = "rapier-wasm-3d"
version = "0.19.3"
edition = "2021"
license = "Apache-2.0"
description = "3-dimensional physics engine - official WASM bindings"

[lib]
crate-type = ["cdylib"]
path = "../../src/lib.rs"

[features]
default = ["dim3"]
dim3 = []
simd = ["rapier3d/simd-stable"]
deterministic = ["rapier3d/enhanced-determinism"]

[dependencies]
rapier3d = { version = "0.32", features = ["debug-render", "serde-serialize"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
bitflags = "2"
palette = "0.7"
bincode = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("dim2", "dim3"))'] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--all-features"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
